# fret

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  release-plz.toml
apps/fret-clip-mask-stress/: Cargo.toml
apps/fret-clip-mask-stress/src/: main.rs
apps/fret-cookbook/: Cargo.toml  EXAMPLES.md  README.md
apps/fret-cookbook/examples/: app_owned_bundle_assets_basics.rs  assets_reload_epoch_basics.rs  async_inbox_basics.rs  canvas_pan_zoom_basics.rs  chart_interactions_basics.rs  commands_keymap_basics.rs  compositing_alpha_basics.rs  customv1_basics.rs  data_table_basics.rs  date_picker_basics.rs  docking_basics.rs  drag_basics.rs  drop_shadow_basics.rs  effects_layer_basics.rs  embedded_viewport_basics.rs  external_texture_import_basics.rs  form_basics.rs  gizmo_basics.rs  hello.rs  hello_counter.rs  icons_and_assets_basics.rs  image_asset_cache_basics.rs  imui_action_basics.rs  markdown_and_code_basics.rs  mutation_toast_feedback_basics.rs  overlay_basics.rs  payload_actions_basics.rs  query_basics.rs  router_basics.rs  simple_todo.rs  simple_todo_v2_target.rs  text_input_basics.rs  theme_switching_basics.rs  toast_basics.rs  toggle_basics.rs  undo_basics.rs  utility_window_materials_windows.rs  virtual_list_basics.rs
apps/fret-cookbook/src/: lib.rs  scaffold.rs
apps/fret-demo/: Cargo.toml  README.md  build.rs
apps/fret-demo-web/: Cargo.toml  README.md  index.html
apps/fret-demo-web/src/: wasm.rs
apps/fret-demo/src/: main.rs
apps/fret-devtools/: Cargo.toml  README.md
apps/fret-devtools-mcp/: Cargo.toml
apps/fret-devtools-mcp/src/: main.rs  native.rs
apps/fret-devtools-ws/: Cargo.toml
apps/fret-devtools-ws/src/: main.rs
apps/fret-devtools/src/: main.rs  native.rs  pack.rs  script_studio.rs  semantics.rs  summarize.rs  ws.rs
apps/fret-diag-export/: Cargo.toml
apps/fret-diag-export/src/: main.rs  native.rs
apps/fret-diag-scriptgen/: Cargo.toml
apps/fret-diag-scriptgen/src/: main.rs
apps/fret-editor/: Cargo.toml
apps/fret-editor/src/: inspector_edit.rs  inspector_protocol.rs  lib.rs  project.rs  property_edit.rs  viewport_overlays.rs  viewport_tools.rs
apps/fret-examples/: Cargo.toml  README.md
apps/fret-examples-imui/: Cargo.toml
apps/fret-examples-imui/src/: imui_floating_windows_demo.rs  imui_hello_demo.rs  imui_shadcn_adapter_demo.rs  lib.rs
apps/fret-examples-imui/tests/: imui_shadcn_adapter_demo_surface.rs
apps/fret-examples/src/: alloc_profile.rs  alpha_mode_demo.rs  api_workbench_lite_demo.rs  area_demo.rs  assets_demo.rs  async_playground_demo.rs  async_playground_demo_legacy.rs  bars_demo.rs  candlestick_demo.rs  canvas_datagrid_stress_demo.rs  category_line_demo.rs  chart_declarative_demo.rs  chart_demo.rs  chart_multi_axis_demo.rs  chart_stress_demo.rs  cjk_conformance_demo.rs  components_gallery.rs  container_queries_docking_demo.rs  custom_effect_v1_demo.rs  custom_effect_v2_demo.rs  custom_effect_v2_glass_chrome_web_demo.rs  custom_effect_v2_identity_web_demo.rs  custom_effect_v2_lut_web_demo.rs  custom_effect_v2_web_demo.rs  custom_effect_v3_demo.rs  custom_effect_v3_web_demo.rs  custom_effect_v3_wgsl.rs  datatable_demo.rs  date_picker_demo.rs  docking_arbitration_demo.rs  docking_demo.rs  drag_demo.rs  drop_shadow_demo.rs  echarts_demo.rs  echarts_multi_grid_demo.rs  editor_notes_demo.rs  editor_notes_device_shell_demo.rs  effect_authoring.rs  effects_demo.rs  embedded_viewport_demo.rs  (+79 more)
apps/fret-examples/tests/: editor_notes_device_shell_surface.rs  editor_notes_editor_rail_surface.rs  imui_editor_collection_box_select_surface.rs  imui_editor_collection_command_package_surface.rs  imui_editor_collection_context_menu_surface.rs  imui_editor_collection_delete_action_surface.rs  imui_editor_collection_keyboard_owner_surface.rs  imui_editor_collection_modularization_surface.rs  imui_editor_collection_rename_surface.rs  imui_editor_collection_select_all_surface.rs  imui_editor_collection_zoom_surface.rs  wgsl_smoke.rs  workspace_shell_editor_rail_surface.rs  workspace_shell_pane_proof_surface.rs
apps/fret-imui-wasm-smoke/: Cargo.toml
apps/fret-imui-wasm-smoke/src/: lib.rs
apps/fret-minimal/: Cargo.toml
apps/fret-minimal/src/: main.rs
apps/fret-renderdoc/: Cargo.toml  README.md
apps/fret-renderdoc/src/: main.rs
apps/fret-svg-atlas-stress/: Cargo.toml
apps/fret-svg-atlas-stress/src/: main.rs
apps/fret-typography-real-shaping-gates/: Cargo.toml
apps/fret-typography-real-shaping-gates/src/: lib.rs
apps/fret-typography-real-shaping-gates/tests/: material3_control_text_real_shaping.rs  ui_kit_fixed_line_box_real_shaping.rs
apps/fret-ui-gallery/: Cargo.toml  README.md  build.rs
apps/fret-ui-gallery-mobile/: Cargo.toml
apps/fret-ui-gallery-mobile/android/: build.gradle  settings.gradle
apps/fret-ui-gallery-mobile/ios/: .gitignore
apps/fret-ui-gallery-mobile/src/: lib.rs
apps/fret-ui-gallery-web/: Cargo.toml  README.md  index.html
apps/fret-ui-gallery-web/src/: native.rs  wasm.rs
apps/fret-ui-gallery/docs/: page-migration-tracker.md
apps/fret-ui-gallery/src/: demo_assets.rs  docs.rs  driver.rs  harness.rs  lib.rs  main.rs  spec.rs  ui.rs
apps/fret-ui-gallery/tests/: accordion_docs_surface.rs  ai_persona_toggle_group_surface.rs  alert_dialog_docs_surface.rs  alert_docs_surface.rs  card_docs_surface.rs  card_rich_description_surface.rs  checkbox_demo_surface.rs  checkbox_table_action_first_surface.rs  collapsible_docs_surface.rs  combobox_diag_surface.rs  combobox_docs_surface.rs  command_diag_surface.rs  command_page_contract.rs  data_table_action_first_surface.rs  data_table_docs_surface.rs  device_shell_strategy_surface.rs  (+37 more)
apps/fretboard/: Cargo.toml  build.rs
crates/fret-a11y-accesskit/: Cargo.toml  README.md
crates/fret-alloc/: Cargo.toml
crates/fret-app/: Cargo.toml  README.md
crates/fret-assets/: Cargo.toml
crates/fret-components-app/: Cargo.toml
crates/fret-components-docking/: Cargo.toml
crates/fret-components-shadcn/: Cargo.toml
crates/fret-components-ui/: Cargo.toml
(+13181 files in other folders)
