[workspace]
members = ["crates/*", "ecosystem/*", "apps/fret-svg-atlas-stress"]
default-members = ["crates/*", "ecosystem/*"]
exclude = [
    # Not part of the default workspace yet (may be promoted or moved to `apps/` later).
    "crates/fret-platform-desktop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
accesskit = "0.22"
cocoa = "0.26"
objc = "0.2"
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slotmap = "1"
taffy = "0.9.2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
web-time = "1"
cosmic-text = "0.16.0"
unicode-script = "0.5.8"
arboard = "3.4.1"
rfd = "0.16"
webbrowser = "1.0.4"
wgpu = "28.0.0"
winit = "0.31.0-beta.2"
naga = "28.0.0"
uuid = { version = "1", features = ["v4", "serde"] }
lyon = "1"
etagere = "0.2.15"
resvg = { version = "0.45.0", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
usvg = { version = "0.45.0", default-features = false }
rust-embed = { version = "8.9.0", features = ["include-exclude"] }
windows-sys = { version = "0.61.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_Input_Ime", "Win32_UI_WindowsAndMessaging"] }
virtualizer = "0.3.0"

# Speed up debug builds: Taffy is layout-hot and also expensive to compile unoptimized.
# GPUI applies a similar per-package opt-level override for Taffy.
[profile.dev.package.taffy]
opt-level = 3
