[workspace]
members = ["crates/*", "ecosystem/*", "apps/*"]
default-members = ["crates/*", "ecosystem/*"]
exclude = [
    # Not part of the default workspace yet (maybe promoted or moved to `apps/` later).
    # Incomplete / incubating.
    "ecosystem/fret-webview",
    "ecosystem/fret-webview-wry",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
# MSRV policy: keep this aligned with the minimum Rust version required
# by the core GPU stack (currently wgpu 28).
rust-version = "1.92"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/fret"
homepage = "https://github.com/Latias94/fret"
documentation = "https://docs.rs/fret"

[workspace.dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
accesskit = "0.22"
cocoa = "0.26"
objc = "0.2"
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
slotmap = "1"
smallvec = "1"
stacksafe = "1"
taffy = "0.9.2"
thiserror = "2"
time = { version = "0.3", features = ["wasm-bindgen"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = { version = "0.11.4", default-features = false, features = ["enable", "callstack-inlines"] }
web-time = "1"
zbus = { version = "5.13.2", default-features = false, features = ["blocking"] }
fluent-bundle = "0.16.0"
fluent-fallback = "0.7.2"
fluent-syntax = "0.12.0"
unic-langid = "0.9"
parley = "0.7.0"
read-fonts = "0.35.0"
swash = { version = "0.2.6", features = ["scale"] }
unicode-script = "0.5.8"
unicode-segmentation = "1.12.0"
unicode-ident = "1.0.13"
ropey = "1.6.1"
arboard = "3.4.1"
rfd = "0.17"
webbrowser = "1.0.4"
wgpu = "28.0.0"
winit = { version = "0.31.0-beta.2", features = ["android-native-activity"] }
naga = "28.0.0"
renderdog = "0.2.0"
renderdog-automation = "0.2.0"
uuid = { version = "1", features = ["v4", "v5", "serde", "js"] }
lyon = "1"
glam = "0.30"
etagere = "0.2.15"
resvg = { version = "0.46.0", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
usvg = { version = "0.46.0", default-features = false }
rust-embed = { version = "8.9.0", features = ["include-exclude"] }
windows-sys = { version = "0.61.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_UI_Input_Ime", "Win32_UI_WindowsAndMessaging"] }
virtualizer = "0.4.0"
keyboard-types = { version = "0.8.3", features = ["serde"] }
rstar = "0.12"
kurbo = "0.11"
pulldown-cmark = "0.13"
mdstream = "0.2.0"
mathjax_svg = "3.2.0"
merman = { path = "../merman/crates/merman", default-features = false }
getrandom = "0.3"
tree-sitter = "0.26.3"
tree-sitter-highlight = "0.26.3"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cmake = "0.7.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25"
tree-sitter-dart-orchard = "0.3.2"
tree-sitter-diff = "0.1.0"
tree-sitter-elixir = "0.3"
tree-sitter-embedded-template = "0.25"
tree-sitter-go = "0.25"
tree-sitter-graphql = "0.1.0"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25"
tree-sitter-jsdoc = "0.25"
tree-sitter-json = "0.24.8"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-lua = "0.4.1"
tree-sitter-make = "1.1.1"
tree-sitter-md = "0.5.1"
tree-sitter-proto = "0.4.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-scala = "0.24"
tree-sitter-sequel = "0.3.8"
tree-sitter-swift = "0.7.0"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.1"
tree-sitter-zig = "1.1.2"
material-colors = "0.4.2"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
sysinfo = "0.33"

# Speed up debug builds: Taffy is layout-hot and also expensive to compile unoptimized.
# GPUI applies a similar per-package opt-level override for Taffy.
[profile.dev]
opt-level = 1

[profile.dev.package.taffy]
opt-level = 3

# Windows/MSVC note: the shadcn test suite can produce very large test binaries.
# Keeping test debuginfo to line-tables only avoids hitting `link.exe` PDB size limits while
# preserving usable backtraces.
[profile.test]
debug = 1
