[package]
name = "fret-clip-mask-stress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
fret-core = { path = "../../crates/fret-core" }
fret-render = { path = "../../crates/fret-render" }
pollster.workspace = true
wgpu.workspace = true

