[package]
name = "fret-demo-web"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
fret-examples = { path = "../fret-examples" }
fret-launch = { path = "../../crates/fret-launch" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
