[package]
name = "fret-demo-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[features]
default = ["cjk-lite-fonts", "devtools-ws"]
emoji-fonts = ["fret-launch/wasm-emoji-fonts"]
cjk-lite-fonts = ["fret-launch/wasm-cjk-lite-fonts"]
devtools-ws = ["fret-examples/devtools-ws", "fret-ui-gallery/devtools-ws"]
ui-gallery-dev = ["fret-ui-gallery/gallery-dev"]
ui-gallery-material3 = ["fret-ui-gallery/gallery-material3"]
ui-gallery-full = ["fret-ui-gallery/gallery-full"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
fret-app = { path = "../../crates/fret-app" }
fret-bootstrap = { path = "../../ecosystem/fret-bootstrap" }
fret-examples = { path = "../fret-examples", default-features = false }
fret-ui-gallery = { path = "../fret-ui-gallery", default-features = false }
fret-router = { path = "../../ecosystem/fret-router", features = ["web-history", "hash-routing"] }
fret-launch = { path = "../../crates/fret-launch" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Location"] }
