[package]
name = "fret-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false
default-run = "fret-demo"

[features]
alloc-profile = ["fret-examples/alloc-profile"]
mathjax-svg = ["fret-examples/mathjax-svg"]
devtools-ws = ["fret-examples/devtools-ws"]
ui-gallery = ["dep:fret-ui-gallery"]
legacy-mvu-demos = ["fret-examples/legacy-mvu-demos"]
hotpatch = [
    "fret-examples/hotpatch",
    "dep:fret-app",
    "dep:fret-bootstrap",
    "dep:fret-core",
    "dep:fret-runtime",
    "dep:fret-ui",
    "dep:fret-ui-kit",
    "dep:fret-ui-shadcn",
]
node-graph-demos = ["fret-examples/node-graph-demos"]
node-graph-demos-legacy = ["fret-examples/node-graph-demos-legacy"]

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
fret-examples = { path = "../fret-examples" }
fret-ui-gallery = { path = "../fret-ui-gallery", optional = true }
fret-app = { path = "../../crates/fret-app", optional = true }
fret-core = { path = "../../crates/fret-core", optional = true }
fret-runtime = { path = "../../crates/fret-runtime", optional = true }
fret-ui = { path = "../../crates/fret-ui", optional = true }
fret-ui-kit = { path = "../../ecosystem/fret-ui-kit", optional = true }
fret-ui-shadcn = { path = "../../ecosystem/fret-ui-shadcn", optional = true }
fret-bootstrap = { path = "../../ecosystem/fret-bootstrap", optional = true, features = ["ui-app-driver", "ui-app-command-palette", "icons-lucide", "icons-ui-semantic-lucide"] }

[[bin]]
name = "ui_gallery"
path = "src/bin/ui_gallery.rs"
required-features = ["ui-gallery"]

[[bin]]
name = "custom_effect_v2_demo"
path = "src/bin/custom_effect_v2_demo.rs"
required-features = ["legacy-mvu-demos"]

[[bin]]
name = "custom_effect_v3_demo"
path = "src/bin/custom_effect_v3_demo.rs"
required-features = ["legacy-mvu-demos"]

[[bin]]
name = "drop_shadow_demo"
path = "src/bin/drop_shadow_demo.rs"
required-features = ["legacy-mvu-demos"]

[[bin]]
name = "embedded_viewport_demo"
path = "src/bin/embedded_viewport_demo.rs"
required-features = ["legacy-mvu-demos"]

[[bin]]
name = "liquid_glass_demo"
path = "src/bin/liquid_glass_demo.rs"
required-features = ["legacy-mvu-demos"]

[[bin]]
name = "todo_demo"
path = "src/bin/todo_demo.rs"
