[package]
name = "fret-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false
default-run = "fret-demo"

[features]
alloc-profile = ["fret-examples/alloc-profile"]
alloc-mimalloc = ["fret-alloc/mimalloc"]
alloc-jemalloc = ["fret-alloc/jemalloc"]
mathjax-svg = ["fret-examples/mathjax-svg"]
devtools-ws = ["fret-examples/devtools-ws"]
macos-hit-test-regions = ["fret-examples/macos-hit-test-regions"]
ui-gallery = ["dep:fret-ui-gallery"]
ui-gallery-dev = ["ui-gallery", "fret-ui-gallery/gallery-dev"]
ui-gallery-material3 = ["ui-gallery", "fret-ui-gallery/gallery-material3"]
ui-gallery-full = ["ui-gallery", "fret-ui-gallery/gallery-full"]
hotpatch = [
    "fret-examples/hotpatch",
    "dep:fret-app",
    "dep:fret-bootstrap",
    "dep:fret-core",
    "dep:fret-runtime",
    "dep:fret-ui",
    "dep:fret-ui-kit",
    "dep:fret-ui-shadcn",
]
node-graph-demos = ["fret-examples/node-graph-demos"]
node-graph-demos-legacy = ["fret-examples/node-graph-demos-legacy"]

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
pollster.workspace = true
serde_json.workspace = true
wgpu.workspace = true
winit.workspace = true
fret-alloc = { path = "../../crates/fret-alloc" }
fret-examples = { path = "../fret-examples" }
fret-render = { path = "../../crates/fret-render" }
fret-ui-gallery = { path = "../fret-ui-gallery", optional = true }
fret-app = { path = "../../crates/fret-app", optional = true }
fret-core = { path = "../../crates/fret-core", optional = true }
fret-runtime = { path = "../../crates/fret-runtime", optional = true }
fret-ui = { path = "../../crates/fret-ui", optional = true }
fret-ui-kit = { path = "../../ecosystem/fret-ui-kit", optional = true }
fret-ui-shadcn = { path = "../../ecosystem/fret-ui-shadcn", optional = true }
fret-bootstrap = { path = "../../ecosystem/fret-bootstrap", optional = true, features = ["ui-app-driver", "ui-app-command-palette", "icons-lucide", "icons-ui-semantic-lucide"] }

[[bin]]
name = "ui_gallery"
path = "src/bin/ui_gallery.rs"
required-features = ["ui-gallery"]

[[bin]]
name = "custom_effect_v2_demo"
path = "src/bin/custom_effect_v2_demo.rs"

[[bin]]
name = "custom_effect_v3_demo"
path = "src/bin/custom_effect_v3_demo.rs"

[[bin]]
name = "drop_shadow_demo"
path = "src/bin/drop_shadow_demo.rs"

[[bin]]
name = "embedded_viewport_demo"
path = "src/bin/embedded_viewport_demo.rs"

[[bin]]
name = "liquid_glass_demo"
path = "src/bin/liquid_glass_demo.rs"

[[bin]]
name = "todo_demo"
path = "src/bin/todo_demo.rs"
