[package]
name = "fret-diag-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde_json.workspace = true

fret-diag = { path = "../../crates/fret-diag" }
fret-diag-protocol = { path = "../../crates/fret-diag-protocol" }

