[package]
name = "fret-diag-scriptgen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[dependencies]
fret-diag-protocol = { path = "../../crates/fret-diag-protocol" }
serde_json.workspace = true

