[package]
name = "fret-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
fret-core = { path = "../../crates/fret-core" }
fret-ui = { path = "../../crates/fret-ui" }
tracing.workspace = true
uuid.workspace = true
