[package]
name = "fret-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[features]
alloc-profile = []
mathjax-svg = ["fret-markdown/mathjax-svg"]
hotpatch = ["fret-launch/hotpatch-subsecond", "fret-bootstrap/hotpatch-subsecond"]
node-graph-demos = []
layout-engine-v2 = ["fret-ui/layout-engine-v2", "fret-ui-docking/layout-engine-v2"]

[dependencies]
anyhow.workspace = true
fret-icons = { path = "../../ecosystem/fret-icons" }
fret-bootstrap = { path = "../../ecosystem/fret-bootstrap", features = ["preload-icon-svgs", "ui-app-driver", "ui-assets", "diagnostics"] }
fret-ui-assets = { path = "../../ecosystem/fret-ui-assets" }
fret-ui-docking = { path = "../../ecosystem/fret-ui-docking" }
fret-ui-shadcn = { path = "../../ecosystem/fret-ui-shadcn" }
fret-ui-kit = { path = "../../ecosystem/fret-ui-kit", features = ["table"] }
fret-plot = { path = "../../ecosystem/fret-plot" }
fret-plot3d = { path = "../../ecosystem/fret-plot3d" }
fret-chart = { path = "../../ecosystem/fret-chart" }
fret-gizmo = { path = "../../ecosystem/fret-gizmo" }
fret-undo = { path = "../../ecosystem/fret-undo" }
delinea = { path = "../../ecosystem/delinea" }
fret-icons-lucide = { path = "../../ecosystem/fret-icons-lucide" }
fret-core = { path = "../../crates/fret-core" }
fret-runtime = { path = "../../crates/fret-runtime" }
fret-launch = { path = "../../crates/fret-launch" }
fret-render = { path = "../../crates/fret-render" }
fret-app = { path = "../../crates/fret-app" }
fret-ui-app = { path = "../../crates/fret-ui-app" }
fret-ui = { path = "../../crates/fret-ui" }
fret-markdown = { path = "../../ecosystem/fret-markdown" }
fret-node = { path = "../../ecosystem/fret-node" }
bytemuck.workspace = true
glam.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
winit.workspace = true
wgpu.workspace = true
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
fret-markdown = { path = "../../ecosystem/fret-markdown", features = ["syntax-rust"] }
fret-code-view = { path = "../../ecosystem/fret-code-view" }
